# testing-arcticdb

./: README.md  main.py  main_arctic.ipynb  pyproject.toml
_arctic_cfg/: data.mdb  lock.mdb
data_regulamentos/: lock.mdb
